<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    tools:context=".presentation.GroupFragment">

    <Button
        android:id="@+id/join_group"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/roundedbutton"
        android:text="Join Group"
        app:layout_constraintBottom_toTopOf="@+id/group_create_group_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/group_name_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <ListView
        android:id="@+id/group_list"
        android:layout_width="410dp"
        android:layout_height="329dp"
        app:layout_constraintBottom_toTopOf="@+id/group_create_group_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groups_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/group_create_group_button"
        android:layout_width="162dp"
        android:layout_height="56dp"
        android:background="@drawable/roundedbutton"
        android:text="Create Group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/groups_title"
        android:layout_width="253dp"
        android:layout_height="26dp"
        android:text="Your Groups"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/group_name_field"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="Group ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/group_create_group_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_list"
        app:layout_constraintVertical_bias="0.323" />

</androidx.constraintlayout.widget.ConstraintLayout>