<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_today"
        android:title="Calendar" />
    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/groups"
        android:title="Groups" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/portfolio"
        android:title="Account" />

</menu>
